--- a/backend/crates/server/public/css/app.css
+++ b/backend/crates/server/public/css/app.css
@@ -701,6 +701,9 @@
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
   }
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
+  }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
   }
@@ -2611,6 +2614,9 @@
   .text-green-800 {
     color: var(--color-green-800);
   }
+  .text-red-600 {
+    color: var(--color-red-600);
+  }
   .text-slate-400 {
     color: var(--color-slate-400);
   }
@@ -3433,6 +3439,15 @@
   .md\:h-screen {
     @media (width >= 48rem) {
       height: 100vh;
+    }
+  }
+  .md\:space-y-4 {
+    @media (width >= 48rem) {
+      :where(& > :not(:last-child)) {
+        --tw-space-y-reverse: 0;
+        margin-block-start: calc(calc(var(--spacing) * 4) * var(--tw-space-y-reverse));
+        margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
+      }
     }
   }
   .md\:space-y-6 {
