--- a/frontend/packages/components/src/index.css
+++ b/frontend/packages/components/src/index.css
@@ -20,7 +20,7 @@
     @apply px-4 py-2 rounded-md inline-block cursor-pointer shadow-sm ring-1 ring-slate-700/10 disabled:bg-gray-100 disabled:hover:bg-gray-100 disabled:cursor-not-allowed disabled:ring-0 disabled:text-gray-400;
   }
   .btn-primary {
-    @apply text-white bg-indigo-500 hover:bg-indigo-600;
+    @apply text-white bg-teal-600 hover:bg-teal-700;
   }
   .btn-secondary {
     @apply hover:text-slate-800 text-slate-700 hover:bg-gray-50;
