--- a/frontend/packages/website/src/css/custom.css
+++ b/frontend/packages/website/src/css/custom.css
@@ -10,6 +10,29 @@
 
 @custom-variant dark (&:is([data-theme="dark"] *));
 
+
+[data-theme='light'] .DocSearch {
+  --docsearch-primary-color: var(--color-orange-500); 
+  --docsearch-text-color: var(--color-orange-950);
+  --docsearch-secondary-text-color: var(--color-orange-950);
+  --docsearch-highlight-color: var(--color-orange-800);
+
+  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
+  --docsearch-container-background: rgba(94, 100, 112, 0.7);
+  /* Modal */
+  --docsearch-modal-background: var(--ifm-color-secondary-lighter);
+  /* Search box */
+  --docsearch-searchbox-background: var(--ifm-color-secondary);
+  --docsearch-searchbox-focus-background: var(--ifm-color-white);
+  /* Hit */
+  --docsearch-hit-color: var(--ifm-font-color-base);
+  --docsearch-hit-active-color: yellow;
+  --docsearch-hit-background: var(--ifm-color-white);
+  /* Footer */
+  --docsearch-footer-background: var(--ifm-color-white);
+  --docsearch-logo-color: var(--color-orange-950);
+}
+
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
